# batch_parser

./: CMakeLists.txt  README.md  TODO.txt  rules.txt
batch_parser/: batch_parser.1  main.cpp  parser.h  parser2.h
batch_parser.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  batch_parser.h  main.cpp  parser.h
tests/: carets.bat  dogs.bat  escaping.bat  exec.bat  fors.bat  group_redirect.bat  grouping.bat  grouping.result  ifs.bat  labels.bat  localized.bat  quotes.bat  redirect.bat  simple.bat  test.bat  too_many_closing_brackets.bat  too_many_closing_brackets.result  utf-8.bat
